--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -19,10 +19,11 @@ html{
   font-size: 60px;
   margin-top: 50px;
 }
+
 /*.test {
   border: 2px solid blue;
-}
-*/
+}*/
+
 
 .thumbnail {
   background-color: #1e1e1e;
@@ -99,12 +100,11 @@ body {
 }
 
 .overlayPic {
-  height: 76%;
-  width: 96%;
+  height: 72%;
+  width: 77%;
   position: absolute;
   z-index: 1;
   background-color: rgba(10,10,10, .6);
-/*  rgba(0, 199, 140,.9);*/
   -webkit-animation: fadein .3s; 
        -moz-animation: fadein .3s; 
         -ms-animation: fadein .3s; 
@@ -124,7 +124,7 @@ body {
 .overlayPic a:hover {
   color: #76EEC6;
   text-decoration: none;
-  padding: 50px;
+/*  padding: 50px;*/
   font-size: 35px;
 }
 
@@ -142,25 +142,21 @@ padding-top: 20%;
 
 
 .picture {
-  height: 100%;
-  width: 100%;
+  height: 80%;
+  width: 80%;
 }
 
 .default {
-  /*height: 422.2px;*/
-  width: 100%;
+  height: 72%;
+  width: 80%;
   position: absolute;
+  left: 10%;
   z-index: 0;
 }
 
 
 #portpage {
   color: white;
-
-/*  background-image: url("http://raydoktor.com/wp-content/uploads/2015/09/dawn-nature-sunset-trees.jpg");
-  background-attachment: fixed;
-  background-size: cover;
-  background-repeat: no-repeat;*/
   z-index: 3;
 }
 
@@ -234,18 +230,19 @@ textarea {
 /*Contact Page*/
 
 video#bgvid { 
-    position: absolute;
-    top: 310px;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: 800px;
-    z-index: -200;
-    -ms-transform: translateX(-50%) translateY(-50%);
+  /*  position: absolute;
+    top: 60px;
+     left: 0px;*/
+    /* max-width: 750px;*/
+ /*   min-height: 100%;*/
+ /*   width: auto;*/
+/* min-width: 20%;*/
+  /*  min-height: 400px;
+    z-index: -200;*/
+ /*   -ms-transform: translateX(-50%) translateY(-50%);
     -moz-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);*/
     background: url("../images/beach.jpg") no-repeat;
     background-size: cover; 
 }
@@ -292,7 +289,7 @@ article img {
 }
 .jumbotron1 {
   color: white;
-  background-image: url("https://raw.githubusercontent.com/amr08/Portfolio/master/assets/img/n5207536_36823579_8696.jpg");
+  background-image: url("../images/pic.jpg");
   border: 2px solid grey;
   border-radius: 20px;
   background-repeat: no-repeat;
@@ -312,7 +309,7 @@ article img {
 
 
 
-/*Home */
+/*Home*/
 
 #aboutBtn {
   border: 2px solid #76EEC6;
@@ -476,8 +473,8 @@ article img {
 
     }
     .overlayPic {
-      height: 74%;
-      width: 96%;
+      height: 69%;
+      width: 77%;
       position: absolute;
       z-index: 1;
       background-color: rgba(10,10,10, .6);
@@ -488,18 +485,42 @@ article img {
 .overlayPic a {
   color: white;
   font-size: 25px;
+
 }
 
 .overlayPic a:hover {
   font-size: 25px;
 }
 
+}
+
+@media screen and (max-width: 480px) {
+
+
+    .overlayPic {
+      height: 62%;
+      width: 75%;
+      position: absolute;
+      z-index: 1;
+      background-color: rgba(10,10,10, .6);
+
+  }
+
+
+  .overlayPic a {
+    color: white;
+    font-size: 25px;
+
+  }
+
+  .overlayPic a:hover {
+    font-size: 25px;
+  }
+
+  .padding {
+  padding-top: 15%;
+  padding-bottom: 20%;
+  
+}
 
 }
-/*  @media screen and (max-width: 440px) {
-    .jumbotron1 {
-      background-size: 100%;
-
-    }
-
-}*/
