--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -104,12 +104,13 @@ body {
   width: 77%;
   position: absolute;
   z-index: 1;
+
   background-color: rgba(10,10,10, .6);
-  -webkit-animation: fadein .3s; 
-       -moz-animation: fadein .3s; 
-        -ms-animation: fadein .3s; 
-         -o-animation: fadein .3s;
-            animation: fadein .3s;
+ /* -webkit-animation: fadein .3s; */
+       -moz-animation: fadein .8s; 
+        -ms-animation: fadein .8s; 
+         -o-animation: fadein .8s;
+            animation: fadein .8s;
 }
 
 .overlayPic a {
@@ -172,10 +173,10 @@ padding-top: 20%;
 }
 
 
-@-webkit-keyframes fadein {
+/*@-webkit-keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
-}
+}*/
 
 @-ms-keyframes fadein {
     from { opacity: 0; }
