--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,7 +1,11 @@
 html{
   font-family: 'Open Sans', sans-serif;
   letter-spacing: 1.5px;
-/*  margin:0 auto;*/
+}
+
+body {
+  padding: 0;
+  background-color: black;
 }
 
 .new-font {
@@ -24,7 +28,6 @@ html{
   border: 2px solid blue;
 }*/
 
-
 .thumbnail {
   background-color: #1e1e1e;
 }
@@ -38,17 +41,9 @@ html{
   max-height: 210px;
 
 }
-/*.space {
-  margin: 10px;
-  margin-top: 20px;
-  margin-bottom: 30px;
-}*/
+
 a {
   color: #76EEC6;
-}
-
-.noline {
-  text-decoration: none;
 }
 
 a:hover {
@@ -56,10 +51,11 @@ a:hover {
   text-decoration: none;
 }
 
-body {
-  padding: 0;
-  background-color: black;
+.noline {
+  text-decoration: none;
 }
+
+
 
 /*custom colors*/
 .background-coral {
@@ -104,19 +100,48 @@ body {
   width: 77%;
   position: absolute;
   z-index: 1;
-
   background-color: rgba(10,10,10, .6);
- /* -webkit-animation: fadein .3s; */
+  -webkit-animation: fadein .3s; 
        -moz-animation: fadein .8s; 
         -ms-animation: fadein .8s; 
          -o-animation: fadein .8s;
             animation: fadein .8s;
 }
 
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to {opacity: 1;}
+}
+
+
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+
 .overlayPic a {
   color: white;
   font-size: 35px;
 }
+
 .overlayPic .box {
    border-right: 1px solid white;
  
@@ -132,7 +157,7 @@ body {
 .padding {
   /*height: 60%;*/
   margin-top: 5%;
-padding-top: 20%;
+  padding-top: 20%;
   padding-bottom: 20%;
   
 }
@@ -160,36 +185,6 @@ padding-top: 20%;
   color: white;
   z-index: 3;
 }
-
-@keyframes fadein {
-  from { opacity: 0; }
-  to {opacity: 1;}
-}
-
-
-@-moz-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-
-/*@-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}*/
-
-@-ms-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-@-o-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-
-
 
 
 /*About Page*/
@@ -244,17 +239,17 @@ video#bgvid {
     -moz-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);*/
-    background: url("../images/beach.jpg") no-repeat;
-    background-size: cover; 
+  /*  background: url("../images/beach.jpg") no-repeat;
+    background-size: cover; */
 }
 
- .css-form input.ng-invalid.ng-touched {
-    border: 3px solid #FA787E;
-  }
+.css-form input.ng-invalid.ng-touched {
+  border: 3px solid #FA787E;
+}
 
-  .css-form input.ng-valid.ng-touched {
-    border: 3px solid #78FA89;
-  }
+.css-form input.ng-valid.ng-touched {
+  border: 3px solid #78FA89;
+}
 
 #custom {
   color: white;
@@ -263,10 +258,8 @@ video#bgvid {
   border: 1px solid grey;
   padding: 20px;
   border-radius: 20px;
-    background: rgba(10,10,10,.8);
-    font-weight: bold;
-
-   
+  background: rgba(10,10,10,.8);
+  font-weight: bold;  
 }
 
 #background-picture {
@@ -308,8 +301,6 @@ article img {
 }
 
 
-
-
 /*Home*/
 
 #aboutBtn {
@@ -341,8 +332,6 @@ article img {
 /* Custom page header */
 .header {
   background-color: black;
-
-
 }
 
 .navbar {
@@ -379,7 +368,6 @@ article img {
 .navbar-toggle:hover{
   border: 1px solid #76EEC6;
   color: white;
-
 }
 
 .icon-bar {
@@ -396,9 +384,6 @@ article img {
   margin-top: 0;
   margin-bottom: 0;
   line-height: 40px;
-
-
-
 }
 
 /* Custom page footer */
@@ -426,6 +411,7 @@ article img {
   background-attachment: fixed;
   font-family: 'Josefin Sans', sans-serif;
 }
+
 .jumbotron h1 {
   font-size: 70px;
 }
@@ -473,6 +459,7 @@ article img {
       background-size: 100%;
 
     }
+
     .overlayPic {
       height: 69%;
       width: 77%;
@@ -480,48 +467,41 @@ article img {
       z-index: 1;
       background-color: rgba(10,10,10, .6);
 
+    }
+
+    .overlayPic a {
+      color: white;
+      font-size: 25px;
+    }
+
+    .overlayPic a:hover {
+      font-size: 25px;
+    }
   }
 
-
-.overlayPic a {
-  color: white;
-  font-size: 25px;
-
-}
-
-.overlayPic a:hover {
-  font-size: 25px;
-}
-
-}
-
 @media screen and (max-width: 480px) {
-
-
     .overlayPic {
       height: 62%;
       width: 75%;
       position: absolute;
       z-index: 1;
       background-color: rgba(10,10,10, .6);
+    }
 
-  }
+    .overlayPic a {
+      color: white;
+      font-size: 25px;
+    }
 
+    .overlayPic a:hover {
+      font-size: 25px;
+    }
 
-  .overlayPic a {
-    color: white;
-    font-size: 25px;
-
-  }
-
-  .overlayPic a:hover {
-    font-size: 25px;
-  }
-
-  .padding {
-  padding-top: 15%;
-  padding-bottom: 20%;
-  
-}
+    .padding {
+      padding-top: 15%;
+      padding-bottom: 20%;  
+    }
 
 }
+
+
