--- a/app/views/about.html
+++ b/app/views/about.html
@@ -7,7 +7,7 @@
 
     <article class="bottom-wrapper">
         <div class="well well-lg ">
-            <p class="lead">In February of 2016, I embarked on a journey to change careers from the counseling profession to web development. As a self-taught coder, I worked independently for 5 months taking a combination of in-person classes with the group Girl Develop It (a group organized to promote women in technology), attended workshops, and completed online classes. Once I had my son that May, I knew I needed to be fully immersed into coding (outside of the house) if I were to ever become proficient in JavaScript and beyond. This is when I entered into the University of North Carolina&#39;s Full-Stack Web Development program and never looked back! I love what I do and look forward to continuing the expansion of my knowledge and experience.  Please feel free to take a look at my projects as well as browse through my dev footprint on GitHub and résumé on LinkedIn.</p>
+            <p class="lead">Here's one you haven't seen yet - Counselor turned Web Developer! To start this journey as a self-taught coder, I worked independently taking a combination of in-person classes with the group Girl Develop It (a group organized to promote women in technology), attended workshops, and completed online classes. Once I had my son, I knew I needed to be fully immersed into coding (outside of the house) if I were to ever become proficient in JavaScript and beyond. This is when I entered into the University of North Carolina&#39;s Full-Stack Web Development program and never looked back! I love what I do and look forward to continuing the expansion of my knowledge and experience.  Please feel free to take a look at my projects as well as browse through my dev footprint on GitHub and résumé on LinkedIn.</p>
 
             <p class="lead text-left"> <strong>Current competencies include:</strong>
             <p class="lead text-left"> <strong>Single Page Applications: </strong>{{ tech.SPA }} </p>
@@ -18,7 +18,7 @@
             <img ng-src= "https://raw.githubusercontent.com/amr08/Basic-Portfolio/master/assets/images/FullSizeRender%208.jpg" alt="Profile Picture">
 
             <p class="lead">Fun facts about me: Yes I love cats&#8230;  cat. Just one.  I like cheese and imported prosciutto, driving manual (and fast!), video games, playing sports rather than watching, piano is cool, traveling, and of course, wait for ittt&#8230; coding :) </p>
-            <p class="lead">Don&#39;t hesitate to reach out to me so we can chat more about web development!
+            <p class="lead">Don&#39;t hesitate to reach out to me so we can chat more about development!
         </div>
     </article>
 </div>
